# tutor-contrib-student-perf-plugin

./: README.rst  pyproject.toml
chalix_student_performance/: __init__.py  plugin.py
chalix_student_performance/patches/: k8s-deployments  k8s-services  openedx-lms-development-settings  openedx-lms-production-settings
